--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGODB_URL=mongodb+srv://ratnasree817:ratnasree817@cluster0.yaqdjjn.mongodb.net/task-manage-app?retryWrites=true&w=majority
-SECRET_KEY=node
+TOKEN_SECRET_KEY=node
+PASSWORD_SECRET_KEY=Isha512@isha
