--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "build": "babel src -d lib"
-  },
+    "start": "nodemon ./bin/www"
+    },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
