--- a/client1/package.json
+++ b/client1/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@ckeditor/ckeditor5-build-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-core": ">=40.1.0",
+    "@ckeditor/ckeditor5-editor-multi-root": ">=40.1.0",
+    "@ckeditor/ckeditor5-engine": ">=40.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-utils": ">=40.1.0",
+    "@ckeditor/ckeditor5-watchdog": ">=40.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.18",
+    "@mui/system": "^5.8.0",
     "@mui/x-date-pickers": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -20,12 +29,13 @@
     "emoji-mart": "3.0.1",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "typescript": ">=2.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
