--- a/client1/package.json
+++ b/client1/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@ckeditor/ckeditor5-build-classic": "^40.1.0",
@@ -29,9 +30,9 @@
     "emoji-mart": "3.0.1",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
-    "react": "^17.0.0",
+    "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
